--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,28 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  background-color: #26355d;
+}
+span,
+.bg-color-primary {
+  background-image: linear-gradient(to right, #7a0d8a, #c92085, #c68109);
+  color: transparent;
+  -webkit-background-clip: text;
+}
+.bg-color-primary {
+  @apply bg-gradient-to-r from-[#7a0d8a] via-[#c92085] to-[#c68109];
+}
+h2 {
+  @apply text-xl md:text-4xl;
+}
+p {
+  @apply text-xl tracking-tight leading-relaxed;
+}
+.glass{
+  background: linear-gradient(135deg, rgba(55,55,55,0.1),rgba(255,255,255,0));
+  filter: blur(20);
+  border-radius: 20px;
+  border: 1px solid rgba(255,255,255,0.18);
+  box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
+}
