--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,10 @@ h2 {
   @apply text-xl md:text-4xl;
 }
 p {
-  @apply text-xl tracking-tight leading-relaxed;
+  @apply text-xl tracking-tight leading-relaxed text-gray-200 text-left;
+}
+textarea,input{
+  @apply mb-2 w-full rounded-md border border-gray-400 py-2 pl-2 pr-4;
 }
 .glass{
   background: linear-gradient(135deg, rgba(55,55,55,0.1),rgba(255,255,255,0));
@@ -26,4 +29,22 @@ p {
   border-radius: 20px;
   border: 1px solid rgba(255,255,255,0.18);
   box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
+}
+.active-project{
+  position:relative;
+}
+.active-project::before,
+.active-project::after{
+  content: "";
+  position:absolute;
+  left: 0;
+  width: 100%;
+  height: 4px;
+  background-color: pink;
+  bottom: -6px;
+}
+.active-project::after{
+  background-color: yellow;
+  width: 80%;
+  bottom: 1px;
 }
